@startuml
class Restaurante{
    - nombre : String
    - direccion : String
    - telefono : String

    + abrir_restaurante()
    + cerrar_restaurante()
    
}
class Empleado{
    - codigo_empleado : String
    - nombre : String
    - puesto : String
    - salario : Double

    + trabajar()
    + descanso()
}
class Comensal{
    - codigo_cliente : String
    - nombre : String
    - pedidos : Int

    + hacer_pedido()
    + pagar_cuenta()
}
class  Pedido{
    - id : Int
    - fecha : String
    - tomapedido : String
    - cuenta : Double

    + calcularTotal()
    + confirmar()
}
class Menu{
    - platillo : String
    - precio : Double
    - categoria : String

    + actualizarPrecio()
}
class Insumos{
    - tipo : boolean
    - nombre :String
    - fecha : String
    - cantidad : Int

    + Verificar_tipo_insumo()
    + Verificar_fecha_caducacion()
}
class Mesa{
    - numero : Int
    - capacidad : Int
    - estado : String

    + reservar()
    + liberar()
}

Restaurante"1" -- "1..n" Empleado: trabaja en <
Restaurante -- Empleado: contrata >

Restaurante"1" -- "1..n" Comensal: usuario de <
Restaurante -- Comensal: es proveedor a >

Restaurante"1" -- "1..n" Mesa: pertenece a <
Restaurante -- Mesa: propietario >

Restaurante"1" -- "1..n" Pedido: solicita a <
Restaurante -- Pedido: atiende el >

Restaurante"1" -- "1..n" Insumos: requiere <
Restaurante -- Insumos: entrega >

Pedido"1" -- "1..n" Menu: solicitados por <
Pedido --  Menu: necesita >

Menu "1" -- "1..n" Insumos: tiene <
Menu -- Insumos: requiere >

Comensal"1" -- "0..n" Pedido: es consumo para <
Comensal --  Pedido: adquiere >

Mesa"1" -- "1..n" Comensal: usuario de <
Mesa -- Comensal: estancia >
@enduml
